--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "viem": "^2.31.4",
     "wagmi": "^2.15.6"
