--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reown/appkit": "^1.7.10",
     "@reown/appkit-adapter-wagmi": "^1.7.10",
     "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-table": "^8.21.3",
     "graphql": "^16.11.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
