--- a/package.json
+++ b/package.json
@@ -8,34 +8,52 @@
     "build": "vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "graphql-codegen",
+    "wagmi:gen": "wagmi generate"
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@reown/appkit": "^1.7.10",
     "@reown/appkit-adapter-wagmi": "^1.7.10",
+    "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-table": "^8.21.3",
-    "graphql": "^16.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
+    "graphql-request": "^7.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.31.4",
     "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@graphql-codegen/cli": "^6.0.0",
+    "@graphql-codegen/typescript": "^5.0.0",
+    "@graphql-codegen/typescript-operations": "^5.0.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@wagmi/cli": "^2.5.1",
+    "abitype": "^1.1.1",
     "autoprefixer": "^10.4.18",
+    "dotenv": "^17.2.2",
     "eslint": "^9.9.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "get-graphql-schema": "^2.1.2",
     "globals": "^15.9.0",
+    "graphql": "^16.11.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
